# hydroserver

./: README.md
auto-upload-ip/: auto-upload-ip.service  auto-upload-ip.sh  auto-upload-ip.timer
dashboard/: main.py  pyproject.toml
hosts/: hydroedge
