[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = "dashboard for hydroserver"
authors = ["Vitório <vcilia@point-8.de>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
